Search params, post selection

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "dropbox": "^9.7.0",
+    "event-js": "^0.1.3",
+    "extripo": "^0.8.6",
     "isomorphic-fetch": "^3.0.0",
     "react": "^17.0.2",
     "react-device-detect": "^1.17.0",
