--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@types/react-transition-group": "^1.1.8",
     "dropbox": "^9.7.0",
     "event-js": "^0.1.3",
-    "extripo": "^0.8.6",
+    "extripo": "^0.8.7",
     "isomorphic-fetch": "^3.0.0",
     "react": "^17.0.2",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
+    "react-tag-input-component": "^2.0.2",
+    "react-transition-group": "^4.4.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
