--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@types/react-transition-group": "^1.1.8",
+    "crypto-browserify": "^3.12.0",
     "dropbox": "^9.7.0",
     "event-js": "^0.1.3",
     "extripo": "^0.8.7",
     "isomorphic-fetch": "^3.0.0",
+    "perlin-simplex": "^0.0.3",
     "react": "^17.0.2",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "react-tag-input-component": "^2.0.2",
     "react-transition-group": "^4.4.5",
+    "util": "^0.12.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
